--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -35,10 +35,12 @@
         android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="64dp"
         android:text="@string/text_welcome_back"
         android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@+id/back_button" />
 
     <TextView
         android:id="@+id/textView2"
@@ -48,6 +50,7 @@
         android:text="@string/text_welcome_back_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
@@ -61,31 +64,32 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="EMAIL-ID"
-        android:textStyle="bold"
         android:textColor="#C4C4C4"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearlayout1"
-        android:layout_height="45dp"
         android:layout_width="fill_parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textView5"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="45dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/rounded_rectangle_white">
+        android:background="@drawable/rounded_rectangle_white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView5">
 
         <EditText
             android:id="@+id/emailID"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
             android:background="@null"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -95,29 +99,30 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:text="PASSWORD"
-        android:textStyle="bold"
         android:textColor="#C4C4C4"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearlayout1" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearlayout2"
-        android:layout_height="45dp"
         android:layout_width="fill_parent"
-        app:layout_constraintTop_toBottomOf="@id/textView6"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="45dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_rectangle_white"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView6">
 
         <EditText
             android:id="@+id/password"
             android:layout_width="250dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
             android:background="@null"
             android:inputType="textPassword"
-            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -126,10 +131,10 @@
             android:id="@+id/showHide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="24dp"
             android:text="SHOW"
             android:textColor="@color/black"
             android:textSize="12dp"
-            android:layout_marginRight="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -140,8 +145,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Having Trouble? "
         android:layout_marginTop="24dp"
+        android:text="Having Trouble? "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearlayout2" />
 
@@ -149,8 +154,8 @@
         android:id="@+id/recoverAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recover Your Account"
         android:layout_marginTop="24dp"
+        android:text="Recover Your Account"
         android:textColor="#EA3056"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/linearlayout2" />
@@ -159,14 +164,14 @@
         android:id="@+id/signIn"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/create_account_disabled"
+        android:gravity="center"
         android:text="SIGN IN"
         android:textColor="@color/white"
         android:textSize="18dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/create_account_disabled"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -176,23 +181,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Don’t you have an account ?  "
         android:layout_marginTop="24dp"
+        android:text="Don’t you have an account ?  "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signIn" />
+
     <com.nas.healthandsafety.custom_fields.text_view.CustomFontTextViewSemiBoldWhite
         android:id="@+id/createAccount"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/rounded_create_account"
+        android:gravity="center"
         android:text="CREATE ACCOUNT"
         android:textColor="@color/white"
-        android:textSize="18dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
 
-        android:background="@drawable/rounded_create_account"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
