--- a/app/src/main/res/layout/dialog_session_select.xml
+++ b/app/src/main/res/layout/dialog_session_select.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -71,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:text="ENTER SESSION YOU WANT TO CHECK IN ? "
+            android:text="SESSION"
             android:textColor="#C4C4C4"
             android:textSize="14sp"
             android:textStyle="bold"
